--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,16 +2,12 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<!-- Disable zooming: -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 <head>
-    <!-- change this to your project name -->
-    <title>AlumniMap Frontend Development</title>
+    <title>Alumnimap Frontend Development</title>
 
-    <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
     <link data-trunk rel="rust" data-wasm-opt="2" />
-    <!-- this is the base url relative to which other urls will be constructed. trunk will insert this from the public-url option -->
     <base data-trunk-public-url />
 
     <link data-trunk rel="icon" href="assets/favicon.ico">
@@ -30,25 +26,19 @@
 
     <style>
         html {
-            /* Remove touch delay: */
             touch-action: manipulation;
         }
 
         body {
-            /* Light mode background color for what is not covered by the egui canvas,
-            or where the egui canvas is translucent. */
             background: #909090;
         }
 
         @media (prefers-color-scheme: dark) {
             body {
-                /* Dark mode background color for what is not covered by the egui canvas,
-                or where the egui canvas is translucent. */
                 background: #404040;
             }
         }
 
-        /* Allow canvas to fill entire web page: */
         html,
         body {
             overflow: hidden;
@@ -58,7 +48,6 @@
             width: 100%;
         }
 
-        /* Make canvas fill entire document: */
         canvas {
             margin-right: auto;
             margin-left: auto;
@@ -84,8 +73,6 @@
             text-align: center;
         }
 
-        /* ---------------------------------------------- */
-        /* Loading animation from https://loading.io/css/ */
         .lds-dual-ring {
             display: inline-block;
             width: 24px;
@@ -117,11 +104,8 @@
 </head>
 
 <body>
-    <!-- The WASM code will resize the canvas dynamically -->
-    <!-- the id is hardcoded in main.rs . so, make sure both match. -->
     <canvas id="the_canvas_id"></canvas>
 
-    <!-- the loading spinner will be removed in main.rs -->
     <div class="centered" id="loading_text">
         <p style="font-size:16px">
             Loading…
@@ -129,10 +113,7 @@
         <div class="lds-dual-ring"></div>
     </div>
 
-    <!--Register Service Worker. this will cache the wasm / js scripts for offline use (for PWA functionality). -->
-    <!-- Force refresh (Ctrl + F5) to load the latest files instead of cached files  -->
     <script>
-        // We disable caching during development so that we always view the latest version.
         if ('serviceWorker' in navigator && window.location.hash !== "#dev") {
             window.addEventListener('load', function () {
                 navigator.serviceWorker.register('sw.js');
@@ -142,5 +123,3 @@
 </body>
 
 </html>
-
-<!-- Powered by egui: https://github.com/emilk/egui/ -->
